fix: Подправил документацию к методам
